# actual_starling_connector

./: .dockerignore  .gitignore  ACCEPTANCE.md  Dockerfile  LICENSE  README.md  brief.md  docker-compose.yml  docker-entrypoint.sh  env.example  justfile  mkdocs.yml  pyproject.toml  run.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
docs/: acceptance.md  configuration.md  development.md  index.md  installation.md  operations.md
src/actual_starling_connector/: __init__.py  config.py  logging.py  state.py
src/actual_starling_connector/actual/: __init__.py  client.py  mapping.py  models.py
src/actual_starling_connector/starling/: __init__.py  client.py  models.py
src/actual_starling_connector/sync/: __init__.py  scheduler.py  worker.py
tests/: conftest.py  helpers.py  test_actual_client.py  test_actual_mapping.py  test_config.py  test_logging.py  test_main.py  test_package.py  test_scheduler.py  test_starling_client.py  test_state.py  test_sync_worker.py
