[project]
name = "actual_starling_connector"
version = "0.0.1"
description = "Actual Starling Connector"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings",
    "structlog",
    "sqlalchemy",
    "httpx",
    "tenacity",
    "actualpy>=0.22.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
main = "actual_starling_connector:main"

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov>=7.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/actual_starling_connector"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["actual_starling_connector"]
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["actual", "actual.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]

[tool.coverage.run]
branch = false
source = ["actual_starling_connector"]

[tool.coverage.report]
show_missing = true
skip_empty = true
